<resources>
    <string name="app_name">Sergio\'s App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="main_menu_title">Sergio\'s Android Apps</string>
    <string name="action_settings">Settings</string>

    <string name="spotify_streamer_name">SPOTIFY STREAMER</string>
    <string name="scores_app_name">SCORES APP</string>
    <string name="library_app_name">LIBRARY APP</string>
    <string name="build_it_bigger_name">BUILD IT BIGGER</string>
    <string name="xyz_reader_name">XYZ READER</string>
    <string name="capstone_name">CAPSTONE: MY OWN APP</string>
</resources>
