<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/main_linearlayout"
    android:background="#02115b">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:background="@mipmap/ic_launcher" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="@dimen/abc_text_size_large_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_menu_title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="@dimen/abc_text_size_large_material" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/spotify_streamer_name"
                android:id="@+id/button_spotify_streamer"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_round_apps"
                android:layout_marginLeft="@dimen/abc_action_button_min_width_material"
                android:layout_marginRight="@dimen/abc_action_button_min_width_material"
                android:clickable="true"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/abc_text_size_caption_material"
                android:layout_gravity="center_horizontal"
                android:minHeight="@dimen/abc_text_size_large_material"
                android:id="@+id/space5" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/scores_app_name"
                android:id="@+id/button_scores_app"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_round_apps"
                android:layout_marginLeft="@dimen/abc_action_button_min_width_material"
                android:layout_marginRight="@dimen/abc_action_button_min_width_material"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/abc_text_size_caption_material"
                android:layout_gravity="center_horizontal"
                android:minHeight="@dimen/abc_text_size_large_material"
                android:id="@+id/space" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/library_app_name"
                android:id="@+id/button_library_app"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_round_apps"
                android:layout_marginLeft="@dimen/abc_action_button_min_width_material"
                android:layout_marginRight="@dimen/abc_action_button_min_width_material"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/abc_text_size_caption_material"
                android:layout_gravity="center_horizontal"
                android:minHeight="@dimen/abc_text_size_large_material"
                android:id="@+id/space2" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/build_it_bigger_name"
                android:id="@+id/button_build_it_bigger"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_round_apps"
                android:layout_marginLeft="@dimen/abc_action_button_min_width_material"
                android:layout_marginRight="@dimen/abc_action_button_min_width_material"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/abc_text_size_caption_material"
                android:layout_gravity="center_horizontal"
                android:minHeight="@dimen/abc_text_size_large_material"
                android:id="@+id/space3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/xyz_reader_name"
                android:id="@+id/button_xyz_reader"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_round_apps"
                android:layout_marginLeft="@dimen/abc_action_button_min_width_material"
                android:layout_marginRight="@dimen/abc_action_button_min_width_material"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/abc_text_size_caption_material"
                android:layout_gravity="center_horizontal"
                android:minHeight="@dimen/abc_text_size_large_material"
                android:id="@+id/space4" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/capstone_name"
                android:id="@+id/button_capstone"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_round_capstone"
                android:layout_marginLeft="@dimen/abc_action_button_min_width_material"
                android:layout_marginRight="@dimen/abc_action_button_min_width_material"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
